--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -25,7 +26,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "expect": "^1.14.0",
-    "foundation-sites": "^6.2.0",
+    "foundation-sites": "6.2.0",
     "jquery": "^2.2.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
