--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0",
-    "redux": "^4.0.0"
+    "react-router": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -27,7 +26,7 @@
     "css-loader": "^0.23.1",
     "expect": "^1.14.0",
     "foundation-sites": "6.2.0",
-    "jquery": "3.0.0",
+    "jquery": "^2.2.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
     "karma-mocha": "^0.2.2",
@@ -36,6 +35,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "redux": "^3.3.1",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
